// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Oracle.EntityFrameworkCore.Metadata;
using OracleDemo.Data;

#nullable disable

namespace OracleDemo.Migrations
{
    [DbContext(typeof(AppDbContext))]
    partial class AppDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.13")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            OracleModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("OracleDemo.Models.Product", b =>
                {
                    b.Property<int>("ProductId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("NUMBER(10)")
                        .HasColumnName("PRODUCT_ID");

                    OraclePropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("ProductId"));

                    b.Property<DateTime>("CreatedDate")
                        .HasColumnType("TIMESTAMP(7)")
                        .HasColumnName("CREATED_DATE");

                    b.Property<decimal>("Price")
                        .HasColumnType("DECIMAL(18, 2)")
                        .HasColumnName("PRICE");

                    b.Property<string>("ProductName")
                        .HasColumnType("NVARCHAR2(450)")
                        .HasColumnName("PRODUCT_NAME");

                    b.Property<long>("RowVersion")
                        .IsConcurrencyToken()
                        .HasColumnType("NUMBER(19)");

                    b.HasKey("ProductId");

                    b.HasIndex("ProductName")
                        .HasDatabaseName("IX_PRODUCTS_NAME");

                    b.ToTable("PRODUCTS");
                });
#pragma warning restore 612, 618
        }
    }
}
